tests/ui/impl-trait/recursive-type-alias-impl-trait-declaration.stderr
error[E0275]: overflow evaluating the requirement `Bar: PartialEq<(Foo, i32)>`
  --> $DIR/recursive-type-alias-impl-trait-declaration.rs:13:13
   |
LL | fn foo() -> Foo {
   |             ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
